src/test/deca/syntax/invalid/personal/19.deca
// Description:
//    tests de non-terminal 'if then else': manque 'if' avant le 'else'.
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
    ((a*b*8%2)%d)/2+1-O*-765875;
    new;
}
